--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
+edition = "2021"
 name = "leveldb-rs"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = { version = "1.0.1", features = ["serde"] }
+bumpalo = {version = "3.15.3"}
+bytes = {version = "1.0.1", features = ["serde"]}
+rand = "0.9.0"
